Closed Bug 1759323 Opened 3 years ago Closed 3 years ago

With sw-wr enabled, and media.wmf.no-copy-nv12-textures = true, some videos and GIF's are opaque green

Categories

(Core :: Graphics, defect)

defect

Tracking

()

VERIFIED FIXED
100 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox98 --- unaffected
firefox99 --- unaffected
firefox100 --- verified

People

(Reporter: mayankleoboy1, Assigned: sotaro)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

enable sw-wr
set media.wmf.no-copy-nv12-textures = true

go to warp.dev -> The animation is completely green
Go to https://bugzilla.mozilla.org/show_bug.cgi?id=1720519 and look at the embedded video - > It is completely green.

Blocks: 1758602
Has Regression Range: --- → yes
Has STR: --- → yes
Attached image Untitled.png
Attached file about:support
Severity: -- → S3
Regressed by: 1723207

Set release status flags based on info from the regressing bug 1723207

:sotaro, since you are the author of the regressor, bug 1723207, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(sotaro.ikeda.g)
Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/78d3275a844d Disable NoCopyNV12Texture with SW-WR r=gfx-reviewers,nical
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch

Reproducible on a 2022-03-12 Nightly(20220312214434) build on Win10. Confirmed as fixed on Firefox 100.0(20220425210429) and Nightly 101.0a1(20220425213655) on Win10 64-bits, macOS 11 and Ubuntu 20.04.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: