Bug 1759323 - Disable NoCopyNV12Texture with SW-WR r=gfx-reviewers,nical

It is not expected to use NoCopyNV12Texture with SW-WR.

Differential Revision: https://phabricator.services.mozilla.com/D140942